Correct error made with initial push

--- a/style.css
+++ b/style.css
@@ -1,37 +1,33 @@
-<<<<<<< HEAD
-/* This is styling for the H1 tag */
-=======
 /* This is styling the H1 tag */
->>>>>>> 8a6a1d60da5a316d8ef2e51f68535c5da79b5a42
 h1 {
-	font-family: verdana, helvetica, sans serif;
-	font-weight: bold;
-	font-size: 16pt;
+  font-family: verdana, helvetica, sans serif;
+  font-weight: bold;
+  font-size: 16pt;
 }
 
 /*This is styling the h2 tag */
 h2 {
-	font-family: verdana, helvetica, san serif;
-	font-weight: bold;
-	font-size: 14pt;
+  font-family: verdana, helvetica, san serif;
+  font-weight: bold;
+  font-size: 14pt;
 }
 
 /*This is styling fpr the H5 tag*/
 h5 {
-	font-weight: bold;
+  font-weight: bold;
 }
 
 /*This is styling for the P tag*/
 p {
-	font-family: arial, helvetica, sans serif;
-	font-size: 10pt;
+  font-family: arial, helvetica, sans serif;
+  font-size: 10pt;
 }
 
 /*This is styling for the list item tag */
 li {
-	font-family: arial, helvetica, sans serif;
-	font-weight: bold;
-	font-size: 10pt;
+  font-family: arial, helvetica, sans serif;
+  font-weight: bold;
+  font-size: 10pt;
 }
 
 /*This is styling for the head tag */
@@ -43,30 +39,26 @@ li {
 
 /*This helps hold the header image in place */
 #header{
-	background-image: url('https://res.cloudinary.com/anowai-py/image/upload/v1566925111/Webpage_Header_1_irwpe9.jpg');
-	background-size: cover;
-	background-repeat: no-repeat;
-	background-position: center;
-	text-align: center;
+  background-image: url('https://res.cloudinary.com/anowai-py/image/upload/v1566925111/Webpage_Header_1_irwpe9.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  text-align: center;
     font-weight: bold;
 
 }
 
 /*This helps center align the side text */
 #side {
-	text-align: center;
+  text-align: center;
 }
 
 /*This help centers the whole table */
 .table_content{
-	text-align: center;
+  text-align: center;
 }
 
-<<<<<<< HEAD
-
-=======
 /*This is class for the experience section*/
->>>>>>> 8a6a1d60da5a316d8ef2e51f68535c5da79b5a42
 .experience {
   background-image: url('https://res.cloudinary.com/anowai-py/image/upload/v1566925111/Webpage_Header_1_irwpe9.jpg');
   width: 120px;
@@ -76,10 +68,7 @@ li {
   text-align: left;
 }
 
-<<<<<<< HEAD
-=======
 /*This is the class for the education tags*/
->>>>>>> 8a6a1d60da5a316d8ef2e51f68535c5da79b5a42
 .education {
   background-image: url('https://res.cloudinary.com/anowai-py/image/upload/v1566925111/Webpage_Header_1_irwpe9.jpg');
   width: 110px;
@@ -89,10 +78,7 @@ li {
   text-align: left;
 }
 
-<<<<<<< HEAD
-=======
 /*This is th tag for the skills tag*/
->>>>>>> 8a6a1d60da5a316d8ef2e51f68535c5da79b5a42
 .skills {
   background-image: url('https://res.cloudinary.com/anowai-py/image/upload/v1566925111/Webpage_Header_1_irwpe9.jpg');
   width: 60px;
@@ -119,8 +105,21 @@ li {
   top:  115%;
   left: 50%;
   transform: translate(-50%, -50%);
-<<<<<<< HEAD
 }
-=======
+
+/*This is for the form page*/
+.form {
+  background-color: #011627;
+  color: #FDFFFC;
+  border: 40px solid #2EC486;
+  padding: 30px;
 }
->>>>>>> 8a6a1d60da5a316d8ef2e51f68535c5da79b5a42
+
+/*This is for the thank you page*/
+#thanks {
+  background-color: #011627;
+  color: #FDFFFC;
+  border: 40px solid #2EC486;
+  padding: 30px;
+  text-align: center;
+}
